home-automation/homeassist/deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassist
  namespace: homeassist
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/match-tag: "true"
spec:
  serviceName: homeassist
  replicas: 1
  revisionHistoryLimit: 2
  updateStrategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: homeassist
  template:
    metadata:
      labels:
        app: homeassist
        name: homeassist
    spec:
      restartPolicy: Always
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: ha-sa-garminupload
      priorityClassName: high-priority
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - nuc4
      containers:
      - name: homeassist
        image: ghcr.io/home-assistant/home-assistant:stable
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
            add: 
            - NET_ADMIN
        resources:
          requests:
            cpu: 150m
            memory: 600Mi
            smarter-devices/ttyUSB1: 1
          limits:
            cpu: 900m
            memory: 1.4Gi
            smarter-devices/ttyUSB1: 1
        livenessProbe:
          httpGet:
            path: /
            port: 8123
          initialDelaySeconds: 90
          periodSeconds: 30
          timeoutSeconds: 15
          failureThreshold: 5
        volumeMounts:
        - name: homeassist
          mountPath: /config
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
      - name: homeassist
        persistentVolumeClaim:
          claimName: nfs-homeassist
      - name: github-ssh-creds
        secret:
          secretName: github-ssh-creds
          defaultMode: 0600
