home-automation/homeassist/ha-deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: homeassist
  namespace: homeassist
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/match-tag: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: homeassist
  template:
    metadata:
      labels:
        app: homeassist
        name: homeassist
    spec:
      restartPolicy: Always
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      serviceAccountName: ha-sa-garminupload
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - nuc4
      containers:
      - name: homeassist
        image: lscr.io/linuxserver/homeassistant:latest  #ghcr.io/home-assistant/home-assistant:stable
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          # runAsNonRoot: false
          # runAsUser: 1000
          # runAsGroup: 100
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
            add:
            - CHOWN
            - SETGID
            - SETUID
            - SETFCAP
        resources:
          requests:
            cpu: 150m
            memory: 600Mi
            smarter-devices/ttyUSB1: 1
          limits:
            cpu: 1500m
            memory: 1Gi
            smarter-devices/ttyUSB1: 1
        livenessProbe:
          httpGet:
            path: /
            port: 8123
          initialDelaySeconds: 90
          periodSeconds: 30
          timeoutSeconds: 15
          failureThreshold: 5
        volumeMounts:
        - name: homeassist
          mountPath: /config
      - name: hass-configurator
        image: causticlab/hass-configurator-docker:latest
        imagePullPolicy: Always
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: false
          seccompProfile:
            type: RuntimeDefault
          capabilities:
            drop: ["ALL"]
        resources:
          requests:
            cpu: 10m
            memory: 20Mi
          limits:
            cpu: 200m
            memory: 40Mi
        livenessProbe:
          httpGet:
            path: /
            port: 3218
          initialDelaySeconds: 90
          periodSeconds: 30
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - name: homeassist
          mountPath: /hass-config
        - name: github-ssh-creds
          mountPath: /root/.ssh
          readOnly: true
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
      - name: homeassist
        persistentVolumeClaim:
          claimName: nfs-homeassist
      - name: github-ssh-creds
        secret:
          secretName: github-ssh-creds
          defaultMode: 0600
