home-automation/homeassist/ma-deploy.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: musicassist
  namespace: homeassist
  annotations:
    keel.sh/policy: force
    keel.sh/trigger: poll
    keel.sh/match-tag: "true"
spec:
  replicas: 1
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: musicassist
  template:
    metadata:
      labels:
        app: musicassist
        name: musicassist
    spec:
      hostNetwork: true
      dnsPolicy: ClusterFirstWithHostNet
      restartPolicy: Always
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/hostname
                operator: In
                values:
                - nuc1
      containers:
      - name: musicassist
        image: ghcr.io/music-assistant/server:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: 150m
            memory: 1Gi
          limits:
            cpu: 1500m
            memory: 1Gi
        volumeMounts:
        - name: musicassist
          mountPath: /data
        - name: media
          mountPath: /media
        - name: tz-config
          mountPath: /etc/localtime
        securityContext:
          privileged: true
          capabilities:
            add: ["SYS_ADMIN", "DAC_READ_SEARCH"]
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      volumes:
      - name: musicassist
        nfs:
          server: 192.168.1.3
          path: /mnt/md0/data/vol/musicassist
      - name: media
        nfs:
          server: 192.168.1.3
          path: /mnt/md1/media/music
      - name: tz-config
        hostPath:
          path: /usr/share/zoneinfo/Canada/Eastern
