home-automation/homeassist/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: homeassist-service
  name: homeassist-service
  namespace: homeassist
spec:
  type: ClusterIP
  ports:
  - port: 8123
    protocol: TCP
    targetPort: 8123
    name: ha-web
  selector:
    app: homeassist

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: haconfig-service
  name: haconfig-service
  namespace: homeassist
spec:
  type: ClusterIP
  ports:
  - port: 3218
    protocol: TCP
    targetPort: 3218
    name: haconfig-web
  selector:
    app: homeassist
