home-automation/homeassist/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: homeassist
  namespace: homeassist
spec:
  parentRefs:
  - name: tls
    namespace: cilium
    sectionName: https
  hostnames:
  - "ha.ucdialplans.com"
  rules:
  - backendRefs:
    - name: homeassist-service
      namespace: homeassist
      kind: Service
      port: 8123
