home-automation/homeassist/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: base-media-tools
  namespace: media-tools
spec:
  podSelector: {}
  policyTypes:
    - Egress
  ingress:
    - from:
        - podSelector: {}
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
    - from:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: homeassist
  egress:
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - port: 53
          protocol: UDP
    - to:
        - namespaceSelector: {}
          podSelector:
            matchLabels:
              app: homeassist
    - to:
        - podSelector:
            matchLabels:
              app: sabnzbd
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: transmission
      ports:
        - port: 9091
    - to:
        - podSelector:
            matchLabels:
              app: prowlarr
      ports:
        - port: 9696
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
      ports:
        - port: 443
        - port: 80
        - port: 563
        - port: 8123
